# ScanSheet-agent

./: .gitignore  CHANGELOG.md  README.md  data.dvc  dvc.yaml  pyproject.toml
.dvc/: config
data/: metrics.json  target.json
data/predicted/: predicted.json
scripts/: evaluate.py
src/: __init__.py  agent.py  model.py  prompt.py  utils.py
src/scansheet_agent/: __init__.py  agent.py  model.py  prompt.py  schemas.py
src/scansheet_agent/templates/: SYSTEM.txt  __init__.py
src/scansheet_agent/templates/document_instructions/: __init__.py  ficha_cadastro_individual.txt  outros.txt
src/templates/: SYSTEM.txt  USER.txt
tests/: __init__.py  run_tests.py  test_agent.py  test_model.py  test_prompt.py
