[project]
name = "scansheet-agent"
version = "1.2.0"
description = "ScanSheet Agent Library"
requires-python = ">=3.10"
authors = [
    {name = "Seu Nome", email = "seu.email@exemplo.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "langchain==0.3.25",
    "langchain-core==0.3.69",
    "langchain-openai==0.3.28",
    "pydantic==2.11.5",
    "openai==1.97.0",
    "mistralai==1.9.2",
    "dvc[gdrive]"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["scansheet_agent"]

[tool.setuptools.package-data]
scansheet_agent = ["templates/*", "templates/**/*"]


[project.optional-dependencies]
dev = [
    "pip-tools",
    "wheel",
    "setuptools",
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]
